<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

	<LinearLayout android:layout_height="@dimen/navbar_height"
		android:layout_width="fill_parent" android:id="@+id/linearLayout1"
		android:orientation="horizontal" android:background="@color/toolbar">
		<Button android:layout_gravity="center_vertical"
			android:layout_weight="0" android:layout_marginLeft="11dip"
			android:textSize="12sp" android:background="@drawable/cancel_bg"
			android:id="@+id/abort_button"
			android:textColor="@drawable/white" android:layout_height="28dip"
			android:layout_width="42dip"></Button>
		<TextView android:layout_gravity="center_vertical"
			android:gravity="center" android:text="@string/change_pwd"
			android:id="@+id/textView1" android:layout_weight="1"
			android:textSize="18sp" android:textColor="@drawable/white"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

		<Button android:layout_gravity="center_vertical"
			android:textSize="12sp" android:layout_weight="0"
			android:layout_marginRight="11dip" 
			android:textColor="@drawable/white" android:layout_width="42dip"
			android:background="@drawable/confirm_bg" android:id="@+id/submit_button"
			android:layout_height="28dip"></Button>
	</LinearLayout>
	
				<EditText android:layout_height="wrap_content" 
					android:hint="@string/fill_old_pwd" android:textColor="@color/black"
					 android:singleLine="true" android:layout_marginTop="15dip"
					 android:id="@+id/old_pwd_EditText"
					android:background="@drawable/textfield_edit_pic" android:textSize="16sp"
					android:textColorHint="@color/lightgray" 
					android:layout_gravity="center_horizontal"
					android:password="true"
					android:layout_width="match_parent"
					android:layout_marginLeft="50dip"
					android:layout_marginRight="50dip"></EditText>
						<EditText android:layout_height="wrap_content" 
					android:hint="@string/fill_new_pwd" android:textColor="@color/black"
					 android:singleLine="true" android:layout_marginTop="10dip"
					 android:id="@+id/new_pwd_EditText"
					android:background="@drawable/textfield_edit_pic" android:textSize="16sp"
					android:textColorHint="@color/lightgray" 
					android:layout_gravity="center_horizontal"
					android:password="true"
					android:layout_width="match_parent"
					android:layout_marginLeft="50dip"
					android:layout_marginRight="50dip"></EditText>
						<EditText android:layout_height="wrap_content" 
					android:hint="@string/fill_new_pwd_again" android:textColor="@color/black"
					 android:singleLine="true" android:layout_marginTop="10dip"
					 android:id="@+id/new_pwd_again_EditText"
					android:background="@drawable/textfield_edit_pic" android:textSize="16sp"
					android:textColorHint="@color/lightgray" 
					android:layout_gravity="center_horizontal"
					android:password="true"
					android:layout_width="match_parent"
					android:layout_marginLeft="50dip"
					android:layout_marginRight="50dip"></EditText>
				
</LinearLayout>
