<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:background="@color/toolbar" >

        <Button
            android:id="@+id/abort_button"
            android:layout_width="42dip"
            android:layout_height="28dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dip"
            android:background="@drawable/cancel_bg"
            android:textColor="@drawable/white"
            android:textSize="12sp" >
        </Button>

        <TextView
            android:id="@+id/summary_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/toevaluate"
            android:textColor="@color/white"
            android:textSize="18sp" >
        </TextView>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="42dip"
            android:layout_height="28dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="11dip"
            android:background="@drawable/confirm_bg"
            android:textColor="@drawable/white"
            android:textSize="12sp" >
        </Button>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/teaching_evaluation_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dip"
                android:layout_marginRight="19dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="8dip"
                        android:text="@string/learning_effect"
                        android:textColor="@color/black"
                        android:textSize="15sp" >
                    </TextView>

                    <TextView
                        android:id="@+id/learning_effect_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/black"
                        android:textSize="15sp" >
                    </TextView>
                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_marginTop="4dip"
                    android:background="@drawable/evaluation_separator" >
                </ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dip">

                    <RatingBar
                        android:id="@+id/ratingbarRed"
                        style="@style/myRatingBarRed"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerInParent="true"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1"
                        android:visibility="gone" >
                    </RatingBar>

                    <RatingBar
                        android:id="@+id/ratingbarGreen"
                        style="@style/myRatingBarGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerInParent="true"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1" >
                    </RatingBar>
                </RelativeLayout>
                <!-- style="?android:attr/ratingBarStyleIndicator" -->

                <EditText
                    android:id="@+id/evaluation_EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dip"
                    android:layout_marginTop="14dip"
                    android:background="@drawable/advice_textfield_gray"
                    android:gravity="top"
                    android:hint="@string/advice_tips"
                    android:lines="7"
                    android:padding="10dip"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" 
                    android:maxLength="200">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_marginTop="18dip"
                    android:text="@string/teaching_effect"
                    android:textColor="@color/black"
                    android:textSize="15sp" >
                </TextView>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_marginTop="4dip"
                    android:background="@drawable/evaluation_separator" >
                </ImageView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dip"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dip"
                        android:text="@string/teaching_arrangement"
                        android:textColor="@color/lightgray"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/tearching_arrangement_radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/teaching_arrangement"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/teaching_arrangement1"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_left"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/teaching_arrangement_value1"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/teaching_arrangement2"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_middle"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/teaching_arrangement_value2"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/teaching_arrangement3"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_right"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/teaching_arrangement_value3"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dip"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dip"
                        android:text="@string/attendance"
                        android:textColor="@color/lightgray"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/attendance_radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/attendance"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/attendance1"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_left"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/attendance_value1"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/attendance2"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_middle"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/attendance_value2"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/attendance3"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_right"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/attendance_value3"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dip"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dip"
                        android:text="@string/teaching_schedule"
                        android:textColor="@color/lightgray"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/teaching_schedule"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/teaching_schedule1"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_left"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/teaching_schedule_value1"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/teaching_schedule2"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_middle"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/teaching_schedule_value2"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/teaching_schedule3"
                            android:layout_width="80dip"
                            android:layout_height="40dip"
                            android:background="@drawable/evaluation_option_button_right"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/teaching_schedule_value3"
                            android:textColor="@color/black"
                            android:textSize="14sp" >
                        </RadioButton>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_marginTop="16dip"
                    android:background="@drawable/evaluation_sep2" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:singleLine="true"
                    android:text="@string/teaching_evaluation_tip"
                    android:textColor="@color/black"
                    android:textSize="11sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>