<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homepage_View"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:background="@color/toolbar" >

        <Button
            android:id="@+id/toolbar_nav_button"
            android:layout_width="42dip"
            android:layout_height="28dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/toolbar_back_icon_bg" >
        </Button>

        <TextView
            android:id="@+id/courseNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="单片机原理及应用"
            android:textColor="@drawable/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#F0F0F0" >
        <TextView
            android:id="@+id/tcard_TextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tcard"
            android:textColor="@color/toolbar"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/advice_TextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/toevaluate"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/spit_TextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/totalk"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/strip"
        android:layout_width="108dip"
        android:layout_height="wrap_content"
        android:contentDescription="strip"
        android:scaleType="fitXY"
        android:src="@drawable/strip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/gray" >
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/teacher_vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>