<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homepage_View"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:background="@color/toolbar" >

        <Button
            android:id="@+id/toolbar_nav_button"
            android:layout_width="42dip"
            android:layout_height="28dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/toolbar_nav_icon_bg" >
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/homepage"
            android:textColor="@drawable/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/toolbar_post_button"
            android:layout_width="44dip"
            android:layout_height="28dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dip"
            android:background="@drawable/toolbar_send_icon_bg" >
        </Button>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/advice_TextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/toevaluate"
            android:textColor="@color/toolbar"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/spit_TextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/totalk"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/stripLeft"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:contentDescription="strip"
            android:scaleType="fitXY"
            android:src="@drawable/strip" />

        <ImageView
            android:id="@+id/stripRight"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:contentDescription="strip"
            android:scaleType="fitXY"
            android:src="@drawable/strip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/gray" >
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>